added bundle support in chain preference selection
Added new BundleChainPreferenceModel as a wrapper for PreferredChainModels
- apply chain preference model in decreasing order of parcel size, so smaller parcels of bundle pick same choice als first/largest parce, temporary fix, since XL parcels may not use bikes

added CopyBundleTransportPreference to select same transport chain as first bundle parcel
to do so: extracted TransportPreferences interface and renamed original class to TransportPreferenceProbabilities

fixed error in GenericParcelDemandModel: parcel were not added to bundleParcel list, so previous parcels of a bundle were not tracked and always empty

fixed bug in QuantityAndBundlingCsvReader: added missing return of bundle size list

log bundle id in result files